--- a/_layouts/java.html
+++ b/_layouts/java.html
@@ -40,7 +40,9 @@ layout: default
           <h2>Vídeos Java</h2>
           <script src="https://apis.google.com/js/platform.js"></script>
           <div class="g-ytsubscribe" data-channel="lineadecodigo" data-layout="default" data-count="default"></div><br/>
-          <iframe width="360" height="215" src="https://www.youtube.com/embed/videoseries?list=PLLVIhySQmrVbjCFPla5c0OIp6iNWfM-hq" frameborder="0" allowfullscreen></iframe>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PLLVIhySQmrVbjCFPla5c0OIp6iNWfM-hq" allowfullscreen></iframe>
+          </div>
 
         </div>
 
