--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -8,7 +8,7 @@ layout: default
 
       <div class="col-md-8 col-md-push-4">
           <h1>{{ page.title }}</h1>
-          <img src="{{site.baseurl}}/img/logos/javascript.png" class="img-responsive pull-right">
+          <img src="{{site.baseurl}}/img/logos/html5.png" class="img-responsive pull-right">
           <div id="markdown-content-container">{{ content }}</div>
 
           <p class="text-center">
@@ -21,7 +21,7 @@ layout: default
           {% include ads.html %}
 
           <hr>
-          {% include section_nav.html items=site.data.javascript name="javascript" %}
+          {% include section_nav.html items=site.data.html5 name="html5" %}
 
 
       </div>
@@ -29,21 +29,20 @@ layout: default
 
         <div class="col-md-4 col-md-pull-8">
 
-          {% include nav.html items=site.data.javascript site=site.javascript name="javascript" %}
+          {% include nav.html items=site.data.html5 site=site.html5 name="html5" %}
 
           <h2>Descargar</h2>
-          <a href="https://gitprint.com/victorcuervo/manualweb/blob/master/java/pdf/tutorial-java-pdf.md"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
-          El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial JavaScript</strong>.
+          <a href="https://gitprint.com/victorcuervo/manualweb/blob/master/html/pdf/tutorial-html-pdf.md"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
+          El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial HTML5</strong>.
 
           {% include ads.html %}
 
-          <h2>Vídeos JavaScript</h2>
+          <h2>Vídeos HTML5</h2>
           <script src="https://apis.google.com/js/platform.js"></script>
           <div class="g-ytsubscribe" data-channel="lineadecodigo" data-layout="default" data-count="default"></div><br/>
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PLLVIhySQmrVaRju-qP84x9YRqTtA_GmfK" allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PLLVIhySQmrVZvt63iAl2xSwTePNmd-UhI" allowfullscreen></iframe>
           </div>
-
         </div>
 
     </div>
