--- a/_layouts/mongodb.html
+++ b/_layouts/mongodb.html
@@ -8,7 +8,7 @@ layout: default
 
       <div class="col-md-8 col-md-push-4">
           <h1>{{ page.title }}</h1>
-          <img src="{{site.baseurl}}/img/mongodb.png" class="img-responsive pull-right">
+          <img src="{{site.baseurl}}/img/logos/mongodb.png" class="img-responsive pull-right">
           <div id="markdown-content-container">{{ content }}</div>
 
           <p class="text-center">
@@ -33,14 +33,16 @@ layout: default
 
           <h2>Descargar</h2>
           <a href="https://gitprint.com/victorcuervo/manualweb/blob/master/java/pdf/tutorial-java-pdf.md"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
-          El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial Java</strong>.
+          El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial MongoDB</strong>.
 
           {% include ads.html %}
 
           <h2>Vídeos MongoDB</h2>
           <script src="https://apis.google.com/js/platform.js"></script>
           <div class="g-ytsubscribe" data-channel="lineadecodigo" data-layout="default" data-count="default"></div><br/>
-          <iframe width="360" height="215" src="https://www.youtube.com/embed/videoseries?list=PLLVIhySQmrVbjCFPla5c0OIp6iNWfM-hq" frameborder="0" allowfullscreen></iframe>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PLLVIhySQmrVZGA6RpEkZJEH3rQOrHbi_c" allowfullscreen></iframe>
+          </div>
 
         </div>
 
