layout java spring

--- a/_layouts/spring.html
+++ b/_layouts/spring.html
@@ -29,7 +29,7 @@ layout: default
 
         <div class="col-md-4 col-md-pull-8">
 
-          {% include section_nav.html items=site.data.spring name="spring" %}
+          {% include nav.html items=site.data.spring site=site.spring name="spring" %}
 
           <h2>Descargar</h2>
           <a href="https://gitprint.com/manualweb/manualweb/blob/master/spring/pdf/tutorial-spring-pdf.md"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
