--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,4 +16,6 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
     {% include analytics.html %}
+
+    <script type="text/javascript" src="https://ads.vidoomy.com/manualweb_14336.js" async></script>
 </head>
