--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
             <a href="{{ site.posts.first.url | prepend: site.baseurl }}">Blog</a> |
             <a href="{{site.baseurl}}/acerca-de/">Acerca de</a> |
             <a href="{{site.baseurl}}/lista-de-correo/">Lista de Correo</a> |
-            <a href="{{ site.posts.first.url | prepend: site.baseurl }}">Contactar</a>
+            <a href="{{site.baseurl}}/contactar/">Contactar</a>
         </p>
 
   </div>
