--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -8,7 +8,7 @@ layout: default
 
       <div class="col-md-8 col-md-push-4">
           <h1>{{ page.title }}</h1>
-          <img src="{{site.baseurl}}/img/logos/html5.png" id="logo-manual" class="img-responsive pull-right">
+          <img src="{{site.baseurl}}/img/logos/html5.png" id="logo-manual" class="img-responsive">
           <div id="markdown-content-container">{{ content }}</div>
 
           <p class="text-center">
@@ -31,9 +31,12 @@ layout: default
 
           {% include nav.html items=site.data.html5 site=site.html5 name="html5" %}
 
+          <a href="{{site.baseurl}}/html5/descargar-manual-html5"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
           <h2>Descargar</h2>
-          <a href="https://gitprint.com/victorcuervo/manualweb/blob/master/html/pdf/tutorial-html-pdf.md"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
-          El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial HTML5</strong>.
+          El manual se encuentra en continua revisión. Desde aquí puedes obtener la <a href="{{site.baseurl}}/html5/descargar-manual-html5">última versión digital del <strong>Tutorial HTML5</strong> o bien obtener actualizaciones mensuales del manual</a>.
+          <br>
+          También tenéis la opción de <a href="{{site.baseurl}}/descargas/">descargar otros manuales</a> o el <a href="{{site.baseurl}}/descargas/#todos-los-manuales">pack con todos los manuales</a>.
+
 
           {% include ads.html %}
 
