--- a/_layouts/javascript.html
+++ b/_layouts/javascript.html
@@ -8,7 +8,7 @@ layout: default
 
       <div class="col-md-8 col-md-push-4">
           <h1>{{ page.title }}</h1>
-          <img src="{{site.baseurl}}/img/logos/javascript.png" id="logo-manual" class="img-responsive pull-right">
+          <img src="{{site.baseurl}}/img/logos/javascript.png" id="logo-manual" class="img-responsive">
           <div id="markdown-content-container">{{ content }}</div>
 
           <p class="text-center">
