Footer y Descargas Javascript

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
 
         <p class="text-center">
             <a href="{{ site.posts.first.url | prepend: site.baseurl }}">Blog</a> |
+            <a href="{{site.baseurl}}/descargas/">Descargas</a> |
             <a href="{{site.baseurl}}/acerca-de/">Acerca de</a> |
             <a href="{{site.baseurl}}/lista-de-correo/">Lista de Correo</a> |
             <a href="{{site.baseurl}}/contactar/">Contactar</a>
