--- a/_layouts/javascript.html
+++ b/_layouts/javascript.html
@@ -31,9 +31,14 @@ layout: default
 
           {% include nav.html items=site.data.javascript site=site.javascript name="javascript" %}
 
+
+          <a href="{{site.baseurl}}/javascript/descargar-manual-javascript"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
           <h2>Descargar</h2>
-          <a href="https://gitprint.com/victorcuervo/manualweb/blob/master/java/pdf/tutorial-java-pdf.md"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
-          El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial JavaScript</strong>.
+          El manual se encuentra en continua revisión. Desde aquí puedes obtener la <a href="{{site.baseurl}}/javascript/descargar-manual-javascript">última versión digital del <strong>Tutorial Javascript</strong> o bien obtener actualizaciones mensuales del manual</a>.
+          <br>
+          También tenéis la opción de <a href="{{site.baseurl}}/descargas/">descargar otros manuales</a> o el <a href="{{site.baseurl}}/descargas/#todos-los-manuales">pack con todos los manuales</a>.
+
+
 
           {% include ads.html %}
 
