--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@ layout: default
                     {% for post in site.posts limit:10 %}
                     <li><a href="{{ post.url | prepend: site.baseurl }}" {% if page.title==post.title %} class="active" {% endif %}>{{ post.title }}</a></li>
                     {% endfor %}
-                    <li><a href="{{ "/allposts" | prepend: site.baseurl }}">Todas las entradas ...</a></li>
+                    <li><a href="{{ "/blog/allposts/" | prepend: site.baseurl }}">Todas las entradas ...</a></li>
                 </ul>
             </div>
             {% include ads.html %}
