--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -8,7 +8,7 @@ layout: default
 
       <div class="col-md-8 col-md-push-4">
           <h1>{{ page.title }}</h1>
-          <img src="{{site.baseurl}}/img/logos/html5.png" id="logo-manual" class="img-responsive">
+          <img src="{{site.baseurl}}/img/logos/html5.png" alt="Logo HTML5" id="logo-manual" class="img-responsive">
           <div id="markdown-content-container">{{ content }}</div>
 
           <p class="text-center">
@@ -25,7 +25,6 @@ layout: default
 
 
       </div>
-
 
         <div class="col-md-4 col-md-pull-8">
 
