alt del icono de manual web

--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
             <a class="navbar-brand" href="{{ site.baseurl }}/">
-                <span><img src="{{site.baseurl}}/img/curso.png"></span> {{ site.title }}
+                <span><img alt="Manual Web. Tutoriales de Programación">src="{{site.baseurl}}/img/curso.png"></span> {{ site.title }}
             </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
