Texto alternativo en descarga de cursos

--- a/_layouts/emberjs.html
+++ b/_layouts/emberjs.html
@@ -32,7 +32,7 @@ layout: default
           {% include nav.html items=site.data.emberjs site=site.emberjs name="emberjs" %}
 
           <h2>Descargar</h2>
-          <a href="https://github.com/manualweb/manualweb/raw/master/_emberjs/pdf/tutorial-emberjs.pdf"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
+          <a href="https://github.com/manualweb/manualweb/raw/master/_emberjs/pdf/tutorial-emberjs.pdf"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png" alt="Descargar Manual"></a>
           El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial EmberJS</strong>.
 
           {% include ads.html %}
