--- a/_layouts/flask.html
+++ b/_layouts/flask.html
@@ -32,7 +32,7 @@ layout: default
           {% include nav.html items=site.data.flask site=site.flask name="flask" %}
 
           <h2>Descargar</h2>
-          <a href="https://gitprint.com/victorcuervo/manualweb/blob/master/java/pdf/tutorial-flask-pdf.md"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
+          <a href="https://gitprint.com/victorcuervo/manualweb/blob/master/java/pdf/tutorial-flask-pdf.md"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png" alt="Descargar Manual"></a>
           El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial Flask</strong>.
 
           {% include ads.html %}
