--- a/_layouts/javascript.html
+++ b/_layouts/javascript.html
@@ -32,7 +32,7 @@ layout: default
           {% include nav.html items=site.data.javascript site=site.javascript name="javascript" %}
 
 
-          <a href="{{site.baseurl}}/javascript/descargar-manual-javascript"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
+          <a href="{{site.baseurl}}/javascript/descargar-manual-javascript"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png" alt="Descargar Manual"></a>
           <h2>Descargar</h2>
           El manual se encuentra en continua revisión. Desde aquí puedes obtener la <a href="{{site.baseurl}}/javascript/descargar-manual-javascript">última versión digital del <strong>Tutorial Javascript</strong> o bien obtener actualizaciones mensuales del manual</a>.
           <br>
