--- a/_layouts/asp.html
+++ b/_layouts/asp.html
@@ -32,7 +32,7 @@ layout: default
           {% include nav.html items=site.data.asp site=site.asp name="asp" %}
 
           <h2>Descargar</h2>
-          <a href="https://github.com/manualweb/manualweb/raw/master/_asp/pdf/tutorial-asp.pdf"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
+          <a href="https://github.com/manualweb/manualweb/raw/master/_asp/pdf/tutorial-asp.pdf"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png" alt="Descargar Manual"></a>
           El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial ASP</strong>.
 
           {% include ads.html %}
