--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -32,7 +32,7 @@ layout: default
           {% include nav.html items=site.data.bootstrap site=site.bootstrap name="bootstrap" %}
 
           <h2>Descargar</h2>
-          <a href="https://github.com/manualweb/manualweb/raw/master/_bootstrap/pdf/tutorial-bootstrap.pdf"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
+          <a href="https://github.com/manualweb/manualweb/raw/master/_bootstrap/pdf/tutorial-bootstrap.pdf"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png" alt="Descargar Manual"></a>
           El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial Bootstrap</strong>.
 
           {% include ads.html %}
