--- a/_layouts/googlemaps.html
+++ b/_layouts/googlemaps.html
@@ -32,7 +32,7 @@ layout: default
           {% include nav.html items=site.data.googlemaps site=site.googlemaps name="googlemaps" %}
 
           <h2>Descargar</h2>
-          <a href="https://github.com/manualweb/manualweb/raw/master/_googlemaps/pdf/tutorial-googlemaps.pdf"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
+          <a href="https://github.com/manualweb/manualweb/raw/master/_googlemaps/pdf/tutorial-googlemaps.pdf"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png" alt="Descargar Manual"></a>
           El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial Google Maps</strong>.
 
           {% include ads.html %}
