--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -32,7 +32,7 @@ layout: default
           {% include nav.html items=site.data.python site=site.python name="python" %}
 
           <h2>Descargar</h2>
-          <a href="#"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
+          <a href="#"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png" alt="Descargar Manual"></a>
           El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial Python</strong>.
 
           {% include ads.html %}
