--- a/_layouts/sql.html
+++ b/_layouts/sql.html
@@ -32,7 +32,7 @@ layout: default
           {% include nav.html items=site.data.sql site=site.sql name="sql" %}
 
           <h2>Descargar</h2>
-          <a href="https://github.com/manualweb/manualweb/raw/master/_sql/pdf/tutorial-sql.pdf"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
+          <a href="https://github.com/manualweb/manualweb/raw/master/_sql/pdf/tutorial-sql.pdf"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png" alt="Descargar Manual"></a>
           El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial SQL</strong>.
 
           {% include ads.html %}
