--- a/_layouts/svg.html
+++ b/_layouts/svg.html
@@ -32,7 +32,7 @@ layout: default
           {% include nav.html items=site.data.svg site=site.svg name="svg" %}
 
           <h2>Descargar</h2>
-          <a href="https://gitprint.com/victorcuervo/manualweb/blob/master/html/pdf/tutorial-html-pdf.md"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png"></a>
+          <a href="https://gitprint.com/victorcuervo/manualweb/blob/master/html/pdf/tutorial-html-pdf.md"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png" alt="Descargar Manual"></a>
           El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial SVG</strong>.
 
           {% include ads.html %}
