--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 
-<h1>Tutorial {{include.name | capitalize}}</h1>
+<h2>Índice {{include.name | capitalize}}</h2>
 
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 {% for section in include.items %}
