nofollow del footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,11 +6,11 @@
       </span>
 
         <p class="text-center">
-            <a href="{{ site.posts.first.url | prepend: site.baseurl }}">Blog</a> |
-            <a href="{{site.baseurl}}/descargas/">Descargas</a> |
-            <a href="{{site.baseurl}}/acerca-de/">Acerca de</a> |
-            <a href="{{site.baseurl}}/lista-de-correo/">Lista de Correo</a> |
-            <a href="{{site.baseurl}}/contactar/">Contactar</a>
+            <a href="{{ site.posts.first.url | prepend: site.baseurl }}" alt="Blog de Manual Web">Blog</a> |
+            <a href="{{site.baseurl}}/descargas/" alt="Descargar Manuales Web">Descargas</a> |
+            <a href="{{site.baseurl}}/acerca-de/" alt="Acerca de Manual Web" rel="nofollow">Acerca de</a> |
+            <a href="{{site.baseurl}}/lista-de-correo/" alt="Lista de Correo de Manual Web" rel="nofollow">Lista de Correo</a> |
+            <a href="{{site.baseurl}}/contactar/" alt="Contactar con el equipo de Manual Web" rel="nofollow">Contactar</a>
         </p>
 
   </div>
