--- a/_layouts/html5.html
+++ b/_layouts/html5.html
@@ -32,9 +32,15 @@ layout: default
 
           <a href="{{site.baseurl}}/html5/descargar-manual-html5/"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png" alt="Descargar Manual"></a>
           <h2>Descargar</h2>
-          El manual se encuentra en continua revisión. Desde aquí puedes obtener la <a href="{{site.baseurl}}/html5/descargar-manual-html5">última versión digital del <strong>Tutorial HTML5</strong> o bien obtener actualizaciones mensuales del manual</a>.
+          El manual se encuentra en continua revisión. Desde aquí puedes obtener la <a href="{{site.baseurl}}/html5/descargar-manual-html5/">última versión digital del <strong>Tutorial HTML5</strong> o bien obtener actualizaciones mensuales del manual</a>.
           <br>
           También tenéis la opción de <a href="{{site.baseurl}}/descargas/">descargar otros manuales</a> o el <a href="{{site.baseurl}}/descargas/#todos-los-manuales">pack con todos los manuales</a>.
+
+          <div id="book">
+            <a href="{{site.baseurl}}/html5/descargar-manual-html5/" alt="descargar manual html5 en pdf">
+              <img src="{{site.baseurl}}/img/books/html5-pdf.webp" alt="Descargar Manual HTML5 en PDF" class="img-responsive"/>
+            </a>
+          </div>
 
 
           {% include ads.html %}
