--- a/_layouts/javascript.html
+++ b/_layouts/javascript.html
@@ -34,10 +34,15 @@ layout: default
 
           <a href="{{site.baseurl}}/javascript/descargar-manual-javascript/"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png" alt="Descargar Manual"></a>
           <h2>Descargar</h2>
-          El manual se encuentra en continua revisión. Desde aquí puedes obtener la <a href="{{site.baseurl}}/javascript/descargar-manual-javascript">última versión digital del <strong>Tutorial Javascript</strong> o bien obtener actualizaciones mensuales del manual</a>.
+          El manual se encuentra en continua revisión. Desde aquí puedes obtener la <a href="{{site.baseurl}}/javascript/descargar-manual-javascript/">última versión digital del <strong>Tutorial Javascript</strong> o bien obtener actualizaciones mensuales del manual</a>.
           <br>
           También tenéis la opción de <a href="{{site.baseurl}}/descargas/">descargar otros manuales</a> o el <a href="{{site.baseurl}}/descargas/#todos-los-manuales">pack con todos los manuales</a>.
-
+        
+          <div id="book">
+            <a href="{{site.baseurl}}/javascript/descargar-manual-javascript/" alt="descargar manual javascript en pdf">
+              <img src="{{site.baseurl}}/img/books/javascript-pdf.webp" alt="Descargar Manual Javascript en PDF" class="img-responsive"/>
+            </a>
+          </div>
 
 
           {% include ads.html %}
