--- a/_layouts/php.html
+++ b/_layouts/php.html
@@ -32,9 +32,13 @@ layout: default
           {% include nav.html items=site.data.php site=site.php name="php" %}
 
           <h2>Descargar</h2>
-          <a href="https://github.com/manualweb/manualweb/raw/master/_php/pdf/tutorial-php.pdf"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png" alt="Descargar Manual"></a>
-          El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial PHP</strong>.
-
+          El manual se encuentra en continua revisión. Desde aquí puedes <a href="#" alt="descargar manual php en pdf">descargarte la última versión del <strong>Tutorial PHP</strong></a>.
+          <div id="book">
+            <a href="#" alt="descargar manual php en pdf">
+              <img src="/img/books/php-pdf.webp" alt="Descargar Manual PHP en PDF" class="img-responsive"/>
+            </a>
+          </div>
+          
           {% include ads.html %}
 
         </div>
