--- a/_layouts/javaee.html
+++ b/_layouts/javaee.html
@@ -32,7 +32,7 @@ layout: default
           {% include nav.html items=site.data.javaee site=site.javaee name="javaee" %}
 
           <h2>Descargar</h2>
-          <a href="https://gitprint.com/victorcuervo/manualweb/blob/master/javaee/pdf/tutorial-java-pdf.md"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png" alt="Descargar Manual"></a>
+          <a href="#"><img class="pull-right" src="{{site.baseurl}}/img/pdf.png" alt="Descargar Manual"></a>
           El manual se encuentra en continua revisión. Desde aquí puedes descargarte la última versión del <strong>Tutorial Java EE</strong>.
 
           {% include ads.html %}
